NetBSD Problem Report #25520
Received: (qmail 10384 invoked by uid 605); 10 May 2004 08:19:04 -0000
Message-Id: <20040510082109.6805F33424@xtraeme.unixbsd.org>
Date: Mon, 10 May 2004 10:21:09 +0200 (CEST)
From: juan@xtraeme.unixbsd.org
Sender: gnats-bugs-owner@NetBSD.org
Reply-To: juan@xtraeme.unixbsd.org
To: gnats-bugs@gnats.NetBSD.org
Subject: Missing math functions in -current
X-Send-Pr-Version: 3.95
>Number: 25520
>Category: standards
>Synopsis: Missing math functions in -current
>Confidential: no
>Severity: serious
>Priority: medium
>Responsible: standards-manager
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Mon May 10 08:20:00 +0000 2004
>Closed-Date: Mon May 10 09:29:52 +0000 2004
>Last-Modified: Tue Feb 06 17:30:01 +0000 2007
>Originator: Juan RP
>Release: NetBSD 2.0_BETA
>Organization:
>Environment:
System: NetBSD Mandylion 2.0_BETA NetBSD 2.0_BETA (Mandylion) #9: Wed Apr 28 01:46:14 CEST 2004 juan@Mandylion:/home/juan/httpd/nbsd/obj/sys/arch/i386/compile/Mandylion i386
Architecture: i386
Machine: i386
>Description:
NetBSD actually is missing some math functions defined in the
The Single UNIX Specification, Version 2. They are:
isgreaterequal(), isless(), islessequal(), islessgreater(),
isunordered(), isgreater(), isgreaterequal().
>How-To-Repeat:
>Fix:
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed
State-Changed-By: kleink
State-Changed-When: Mon May 10 09:25:30 UTC 2004
State-Changed-Why:
These are not "The Single UNIX Specification, Version 2"
interfaces (v2 predates those quite a bit) but C99 _macros_.
Barring a supplied fix I'm pushing this back into the envelope
of standards/10803.
From: Matthias Drochner <drochner@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc:
Subject: PR/25520 CVS commit: src/include
Date: Tue, 6 Feb 2007 17:29:37 +0000 (UTC)
Module Name: src
Committed By: drochner
Date: Tue Feb 6 17:29:37 UTC 2007
Modified Files:
src/include: math.h
Log Message:
add the isgreater() at al. comparision macros defined in C99 and SUSv3;
use just the primitive macros for now (identical to FreeBSD/DragonFly)
which don't use gcc internals, the rest can go in after some testing;
addresses PR standards/25520
To generate a diff of this commit:
cvs rdiff -r1.44 -r1.45 src/include/math.h
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.