add the isgreater() at al. comparision macros defined in C99 and SUSv3; use just the primitive macros for now (identical to FreeBSD/DragonFly) which don't use gcc internals, the rest can go in after some testing; addresses PR standards/25520